operator/config/quickstart/network_policy.yaml
# A network policy to allow Pulumi workspaces in the `default` namespace to
# accept RPC traffic from the controller-manager in the `pulumi-kubernetes-operator` namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-workspace-rpc
  namespace: default
spec:
  podSelector:
    matchLabels:
      auto.pulumi.com/component: workspace
  ingress:
    - ports:
        - protocol: TCP
          port: grpc
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pulumi-kubernetes-operator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: pulumi-kubernetes-operator
  policyTypes:
    - Ingress
